--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-typescript": "7.10.4",
+    "@types/node": "14.6.4",
     "@types/uuid": "^8.3.0",
     "concurrently": "^5.2.0",
     "typescript": "3.9.7"
