--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@visual-nodes/core",
-  "version": "0.0.1",
+  "version": "0.0.2-beta.0",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
