--- a/package.json
+++ b/package.json
@@ -36,15 +36,17 @@
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "@types/events": "^3.0.0",
     "@types/node": "14.6.4",
     "@types/uuid": "^8.3.0",
-    "@types/events": "^3.0.0",
     "events": "3.2.0",
+    "lodash.throttle": "4.1.1",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-typescript": "7.10.4",
+    "@types/lodash.throttle": "4.1.6",
     "concurrently": "^5.2.0",
     "typescript": "3.9.7"
   }
